# apier

./: .gitignore  CHANGELOG.md  Makefile  README.md  build.py  cli.py  consts.py  endpoints.py  extensions.py  merge.py  openapi.py  pyproject.toml  renderer.py  tree.py  utils.py
.github/workflows/: ci.yaml
apier/cli/: cli.py
apier/core/: build.py  consts.py  renderer.py
apier/core/api/: endpoints.py  openapi.py  tree.py
apier/extensions/: extensions.py  pagination.py
apier/templates/python_tree/: functions.py  gen_models.py  renderer.py  security.py
apier/utils/: data_access.py  dicts.py  strings.py
core/: build.py  renderer.py
core/api/: endpoints.py  tree.py
docs/cli/: README.md
docs/extensions/: README.md  expressions.md  pagination.md
docs/templates/: README.md  python_tree.md
extensions/: extensions.py  input_parameters.py  method_name.py
templates/python/: api_template.jinja  functions.py  gen_models.py  node_template.jinja  renderer.py  ruff.toml  security.py  security_template.jinja
templates/python/templates/: api.jinja  method_docstring.jinja  node.jinja  security.jinja
templates/python_tree/: functions.py  gen_models.py  renderer.py  security.py
templates/python_tree/templates/: node.jinja
test/: endpoint_test.py  expected_data.py  test_dicts.py  test_endpoint.py  test_strings.py  test_tree.py  tree_test.py
test/definitions/: companies_api.yaml  pagination_api.yaml
test/templates/python/: common.py  setup.py  test_api.py  test_base_model.py  test_content_type.py  test_models.py  test_resource.py  test_runtime_expr.py  test_runtime_expr_evaluate.py  test_runtime_expr_prepare_req.py  test_security.py
tests/: endpoint_test.py  test_dicts.py  test_endpoint.py  test_extensions.py  test_strings.py  test_tree.py
tests/definitions/: companies_api.yaml  files_api.yaml  pagination_api.yaml
tests/templates/: setup.py
tests/utils/: test_data_access.py
utils/: dicts.py  strings.py
(+60 files in other folders)
