[tool.poetry]
name = "openapi-client-gen"
version = "0.1.0"
description = ""
authors = ["Daniel Sánchez Gallego <dsanchez@altair.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openapi3 = "^1.7.0"
openapi-spec-validator = "^0.6.0"
prance = "^23.6.21.0"
Jinja2 = "^3.1.2"
pydantic = "^1.10.9"
vulture = "^2.7"
datamodel-code-generator = "^0.23.0"
xmltodict = "^0.13.0"
ruff = "^0.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
