[tool.poetry]
name = "apier"
version = "0.1.0"
description = ""
authors = ["flusflas <aflusflas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openapi3 = "^1.7.0"
openapi-spec-validator = "^0.7.1"
prance = "^23.6.21.0"
Jinja2 = "^3.1.2"
pydantic = "^1.10.18"
vulture = "^2.11"
datamodel-code-generator = "^0.25.9"
xmltodict = "^0.13.0"
ruff = "^0.6.2"
click = "^8.1.7"
onedict = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
apier = "apier.cli.cli:cli"
